2012-01-26  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-srvr.el (gnus-server-prepare): Use it to avoid showing ephemeral
	methods (bug#9676).

	* gnus.el (gnus-method-ephemeral-p): New function.

2012-01-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-mode): Force paragraph direction to be
	left-to-right.

2012-01-26  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnir-search-thread): Autoload to avoid a compilation
	warning.

2012-01-25  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-line-format-alist): Don't try to
	macroexpand the nnir things, since they haven't been defined yet, and
	nnir requires gnus-sum.

2012-01-24  Julien Danjou  <julien@danjou.info>

	* color.el (color-rgb-to-hsl): Fix value computing.
	(color-hue-to-rgb): New function.
	(color-hsl-to-rgb): New function.
	(color-clamp, color-saturate-hsl, color-saturate-name)
	(color-desaturate-hsl, color-desaturate-name, color-lighten-hsl)
	(color-lighten-name, color-darken-hsl, color-darken-name): New function.

2012-01-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mm-decode.el (mm-interactively-view-part): Fix prompt.

2012-01-19  Julien Danjou  <julien@danjou.info>

	* color.el (color-name-to-rgb): Use the white color to find the max
	color component value and return correctly computed values.
	(color-name-to-rgb): Add missing float conversion for max value.

2012-01-10  Teodor Zlatanov  <tzz@lifelogs.com>

	* nntp.el (nntp-send-authinfo): Query `auth-source-search' with the
	logical server name in addition to the actual machine address.

	* auth-source.el (auth-source-user-and-password): Add convenience
	wrapper to search by just host and optionally user.

2012-01-07  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-visit-file): Move point to the beginning of the buffer
	after rendering.

2012-01-07  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-sync.el (gnus-sync-newsrc-groups): Quote normally.